--- a/templates/header.html
+++ b/templates/header.html
@@ -12,23 +12,19 @@
   crossorigin="anonymous"></script>
 
   <script id="head-template" type="text/x-handlebars-template">
-    <div class="bgimage">
-      <div class="header">
-        <div class="leftmenu">
-            <img src="../images/logo.png"; width="200px">       
-        </div>
-        <div class="rightmenu">
-                <ul>
-                        <li><a href="#">{{link1}}</a></li>
-                        <li><a href="#">{{link2}}</a></li>
-                        <li><a href="#">{{link3}}</a></li>
-                        <li><a href="#">{{link4}}</a></li>
-                        <li><a href="#">{{link5}}</a></li>
-                        <li><a href="#">{{link6}}</a></li>
-                        <li><a href="#">{{link7}}</a></li>  
-                </ul>
-        </div>
-      </div>
+    <div class="header">
+      <nav>
+        <img src="../images/logo.png" width="250px" style="margin-left:33px; margin-top:24px";>
+        <ul>
+          <li><a href="#">{{link1}}</a></li>
+          <li><a href="#">{{link2}}</a></li>
+          <li><a href="#">{{link3}}</a></li>
+          <li><a href="#">{{link4}}</a></li>
+          <li><a href="#">{{link5}}</a></li>
+          <li><a href="#">{{link6}}</a></li>
+          <li><a href="#">{{link7}}</a></li>  
+        </ul>
+      </nav> 
     </div>  
   </script>
 
@@ -49,7 +45,7 @@
       "link4": "Pricing",
       "link5": "Support",
       "link6": "Login",
-      "link7": "Free SignUP",
+      "link7": "SignUP",
     };
   
     // Pass our data to the template
