add class sign for signup field

--- a/templates/header.html
+++ b/templates/header.html
@@ -22,7 +22,7 @@
           <li><a href="#">{{link4}}</a></li>
           <li><a href="#">{{link5}}</a></li>
           <li><a href="#">{{link6}}</a></li>
-          <li><a href="#">{{link7}}</a></li>  
+          <li class=sign><a href="#">{{link7}}</a></li>  
         </ul>
       </nav> 
     </div>  
@@ -45,7 +45,7 @@
       "link4": "Pricing",
       "link5": "Support",
       "link6": "Login",
-      "link7": "SignUP",
+      "link7": "Sign up",
     };
   
     // Pass our data to the template
