--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,14 @@ nav ul li{
   display: inline-block;
   transition: 0.8s all;
 }
-nav ul li:hover{ border-bottom: 5px solid skyblue; height: 60px;}/*background-color: skyblue;  */
+nav ul li:hover{ border-bottom: 5px solid skyblue; height:60px;}/*background-color: skyblue;  */
 
 nav ul li a{
   text-decoration: none;
   color:white;
   padding: 20px;
 }
+
+nav ul .sign:hover{ border-bottom:none; background: none;}
+nav ul .sign a{background: skyblue;}
+
