add change class in function

--- a/templates/header.html
+++ b/templates/header.html
@@ -52,7 +52,7 @@
     var theCompiledHtml = theTemplate(context);
   
     // Add the compiled html to the page
-    $('.content-placeholder').html(theCompiledHtml);
+    $('.content').html(theCompiledHtml);
   });
   </script>
   
@@ -60,6 +60,6 @@
 <body>
   
   <!--Your new content will be displayed in here-->
-  <div class="content-placeholder"></div>
+  <div class="content"></div>
 </body>
 </html>
