--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,30 @@ nav ul li a{
 nav ul .sign:hover{ border-bottom:none; background: none;}
 nav ul .sign a{background: skyblue;}
 
+.footer{
+  background:white;
+  color: white;
+  height: 200px;
+  position: relative;
+}
+.footer .footer-content{
+  border: 1px solid grey;
+  display: flex;
+  /* height: 149px; */
+}
+.footer .footer-content .footer-section{
+  flex: 1;
+  padding: 74px;
+  /* border: 1 px solid grey; */
+}
+
+.footer .footer-bottom{
+  background:whitesmoke;
+  color:grey;
+  height: 34px;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom:5px;
+  padding-top: 10px;
+}
