--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Footer</title>
-  <link href="../css/style.css" rel="stylesheet" type="text/css" />
-  <link rel="import" href="header.html">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
 
   <script id="footer-template" type="text/x-handlebars-template">
     <div class="footer">
@@ -27,30 +14,40 @@
     </div>  
   </script>
 
-  <script>
-  $(function () {
-    // Grab the template script
-    var theTemplateScript = $("#footer-template").html();
-  
-    // Compile the template
-    var theTemplate = Handlebars.compile(theTemplateScript);
-  
-    // Define our data object
-    var context={
 
-     
-    };
-  
-    // Pass our data to the template
-    var theCompiledHtml = theTemplate(context);
-  
-    // Add the compiled html to the page
-    $('.content-placeholder').html(theCompiledHtml);
-  });
-  </script>
-  
-</head>
-<body>
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5d6e582ceb1a6b0be60ab537/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+
+    <script>
+        $(function () {
+          // Grab the template script
+          var theTemplateScript = $("#footer-template").html();
+        
+          // Compile the template
+          var theTemplate = Handlebars.compile(theTemplateScript);
+        
+          // Define our data object
+          var context={
+      
+           
+          };
+        
+          // Pass our data to the template
+          var theCompiledHtml = theTemplate(context);
+        
+          // Add the compiled html to the page
+          $('.content-placeholder').html(theCompiledHtml);
+        });
+        </script>
   
   <!--Your new content will be displayed in here-->
   <div class="content-placeholder"></div>
