in footer bottom add some filed like privacy,terms and all

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,6 +9,12 @@
       </div>
       <div class="footer-bottom">
         &copy; 2019 LambdaTest.com. All rights reserved
+        <ul>
+            <li><a href="#">{{obj1}}</a></li>
+            <li><a href="#">{{obj2}}</a></li>
+            <li> <a href="#">{{obj3}}</a></li>
+          
+        </ul>
       </div>
       
     </div>  
@@ -37,8 +43,10 @@
         
           // Define our data object
           var context={
-      
-           
+            "obj1": "privacy",
+            "obj2": "Term of use",
+            "obj3": "Sitemap"
+       
           };
         
           // Pass our data to the template
