--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,7 +8,7 @@
         
       </div>
       <div class="footer-bottom">
-        &copy; 2019 LambdaTest.com. All rights reserved
+        &copy;<p 2019 LambdaTest.com. All rights reserved
         <ul>
             <li><a href="#">{{obj1}}</a></li>
             <li><a href="#">{{obj2}}</a></li>
