--- a/css/style.css
+++ b/css/style.css
@@ -33,16 +33,16 @@ nav ul .sign:hover{ border-bottom:none; background: none;}
 nav ul .sign a{background: skyblue;}
 
 .footer{
-  background:rgb(192, 189, 189);
-  color: white;
+  background:whitesmoke;
+  color: #555;
   height: 200px;
   position: relative;
 }
-.footer .footer-content{
+/*.footer .footer-content{
   border: 1px solid grey;
   display: flex;
-  /* height: 149px; */
-}
+   height: 149px; 
+}*/
 /* .footer .footer-content .footer-section{ 
   flex: 1;
   padding: 74px;
@@ -52,10 +52,26 @@ nav ul .sign a{background: skyblue;}
  .footer .footer-bottom{ 
   background:black;
   color:grey;
-  height: 34px;
+  height: 45px;
   width: 100%;
-  text-align: center;
+  /* text-align: center; */
   position: absolute;
-  bottom:5px;
+  /* margin-left: 20px; */
+  bottom:0px;
   padding-top: 10px;
 }
+.footer-bottom ul{
+  float: right;
+  margin-right: 30px;
+}
+.footer-bottom ul li{
+  list-style-type: none;
+  display: inline-block;
+  transition: 0.8s all;
+}
+ .footer-bottom ul li a{
+  color:#555;
+  text-decoration: none;
+  padding: 20px; 
+}
+.footer-bottom ul li:hover{ border-bottom: 2px solid black; height:25px;}
