--- a/templates/header.html
+++ b/templates/header.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Header</title>
+  <title>Support page</title>
   <link href="../css/style.css" rel="stylesheet" type="text/css" />
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
 
 
