--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 *{margin: 0; padding: 0; font-family: Verdana, Geneva, Tahoma, sans-serif; }
-
+/* header style */
 .header{
   width: 100%;
-  height: 100vh;
+
   /* background-image: url(../images/greybg.jpg); */
   background-size: cover;
 }
@@ -15,6 +15,7 @@ nav{
 nav ul{
   float: right;
   margin-right: 30px;
+  margin-bottom: 0;
 }
 nav ul li{
   list-style-type: none;
@@ -28,10 +29,12 @@ nav ul li a{
   color:white;
   padding: 20px;
 }
+nav ul li a:hover{ color:skyblue;}
 
 nav ul .sign:hover{ border-bottom:none; background: none;}
 nav ul .sign a{background: skyblue;}
 
+/* footer style */
 .footer{
   background:whitesmoke;
   color: #555;
@@ -49,16 +52,17 @@ nav ul .sign a{background: skyblue;}
  border: 1 px solid grey; 
 } */
 
- .footer .footer-bottom{ 
-  background:black;
-  color:grey;
+ .footer .footer-bottom{
+  background: #1e9aa4;
+  color: white;
   height: 45px;
   width: 100%;
   /* text-align: center; */
   position: absolute;
-  /* margin-left: 20px; */
-  bottom:0px;
+  padding-left: 25px;
+  bottom: 0px;
   padding-top: 10px;
+
 }
 .footer-bottom ul{
   float: right;
@@ -70,8 +74,33 @@ nav ul .sign a{background: skyblue;}
   transition: 0.8s all;
 }
  .footer-bottom ul li a{
-  color:#555;
+  color: #fff;
   text-decoration: none;
-  padding: 20px; 
+  padding: 20px;
 }
-.footer-bottom ul li:hover{ border-bottom: 2px solid black; height:25px;}
+.footer-bottom ul li:hover{border-bottom: 3px solid #FFC107;height:25px;}
+
+/* midpart style */
+.midpart{text-align: center;}
+.search{ background-color: skyblue; margin-bottom: 20px; padding: 60px; font-size: 20px;}
+input[type=text]
+{
+	border: none;
+	width: 100%;
+	/* background: black;
+	color: white; */
+	font-size: 15px;
+	line-height: 25px;
+  padding: 10px 0;
+  padding-left: 10px;
+	border-radius: 24px;
+	margin-top: 12px;
+	cursor: pointer;
+}
+.icon{position: absolute;
+  right: 22px;
+  top: 25px;
+  background: none;
+  border: 0;}
+
+  
