--- a/css/style.css
+++ b/css/style.css
@@ -41,16 +41,16 @@ nav ul .sign a{background: skyblue;}
   height: 200px;
   position: relative;
 }
-/*.footer .footer-content{
-  border: 1px solid grey;
-  display: flex;
-   height: 149px; 
-}*/
-/* .footer .footer-content .footer-section{ 
-  flex: 1;
-  padding: 74px;
- border: 1 px solid grey; 
-} */
+.design {list-style: none;}
+.design a{
+  color:black !important;
+  text-decoration: none !important;
+  display: block;
+  margin-top: 12px;
+
+}
+
+.design li img{width: 20px;}
 
  .footer .footer-bottom{
   background: #1e9aa4;
@@ -134,6 +134,7 @@ input[type=text]
   margin-right:10px;} 
 .answer{font-size: 13px; margin-left: 20px; display: none;}
 
+/* box part */
 .box{text-align: center; margin-top: 20px; }
 .box .mainbox{
   display: inline-block;
