add more field in footer class container

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,10 +5,10 @@
           <div class="row">
               <div class="col-4">
                 <ul class="design">
-                <li><a href="#"><i class="fa fa-facebook  pic"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter pic"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin pic"></i></a></li>
-                <li><a href="#"><i class="fas fa-envelope pic"></i>
+                <li><a href="#" class="social"><i class="fa fa-facebook pic socialfa"></i></a></li>
+                <li><a href="#" class="social"><i class="fa fa-twitter pic socialfa"></i></a></li>
+                <li><a href="#" class="social"><i class="fa fa-linkedin pic socialfa"></i></a></li>
+                <li><a href="#" class="social"><i  class="fas fa-envelope-square socialfa"></i>
                  </a></li> 
                 </ul>
               </div>
