change in footer file icons

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,12 +3,13 @@
     <div class="footer">
       <div class="container">
           <div class="row">
-              <div class="col-4">
+              <div class="col-12 col-sm-6 col-md-3">
                 <ul class="design">
-                <li><a href="#" class="social"><i class="fa fa-facebook pic socialfa"></i></a></li>
-                <li><a href="#" class="social"><i class="fa fa-twitter pic socialfa"></i></a></li>
-                <li><a href="#" class="social"><i class="fa fa-linkedin pic socialfa"></i></a></li>
-                <li><a href="#" class="social"><i  class="fas fa-envelope-square socialfa"></i>
+                <li class="social"><a href="#" ><i class="fa fa-facebook pic socialfa"
+                   style="color:#3b5998";></i></a></li>
+                <li class="social"><a href="#"><i class="fa fa-twitter pic socialfa" style="color:#00acee";></i></a></li>
+                <li class="social"><a href="#" class="social"><i class="fa fa-linkedin pic socialfa" style="color:#3b5998";></i></a></li>
+                <li class="social"><a href="#" class="social"><i  class="fa fa-youtube socialfa" style="color:#c4302b ";></i>
                  </a></li> 
                 </ul>
               </div>
