--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ nav ul .sign a{background: skyblue;}
   height: 200px;
   position: relative;
 }
-.design {list-style: none;}
+.design {list-style: none; font-size: 14px;}
 .design a{
   color:black !important;
   text-decoration: none !important;
@@ -147,16 +147,18 @@ input[type=text]
 .box{text-align: center; margin-top: 20px; margin-bottom: 15px; }
 .box .mainbox{
   display: inline-block;
-    padding: 22px;
-    border: 1px solid #ddd;
-    width: 28%;
-    background-color: white;
-    height: 150px;
-    line-height: 100px;
-    font-size: 30px;
-    text-align: center;
-    color:#303030;
-    margin-right: 15px;
-    margin-left: 15px;
-
+  padding: 42px;
+  border: 1px solid #ddd;
+  width: 28%;
+  background-color: white;
+  height: 187px;
+  line-height: 100px;
+  font-size: 30px;
+  text-align: center;
+  color: #303030;
+  margin-right: 15px;
+  margin-left: 10px;
+  border-radius: 32px;
+  text-decoration: none;
 }
+.box a:hover{color: skyblue;}
