add search bar code

--- a/templates/header.html
+++ b/templates/header.html
@@ -30,6 +30,14 @@ crossorigin="anonymous"></script>
         </ul>
       </nav> 
     </div>  
+    <div class="search">
+        <h2>Welcome to Our Support Center</h2>
+        <p style="margin-bottom: 20px">How Can We Help You?</p>
+        <form class="bar" action="#" style="margin:auto;max-width:450px; position: relative;">
+          <input type="text" placeholder="Type your question here.." name="search1">
+          <button type="submit" class="icon"><i class="fa fa-search"></i></button>
+        </form>
+      </div>
   </script>
 
   <script>
