--- a/css/style.css
+++ b/css/style.css
@@ -46,17 +46,21 @@ nav ul .sign a{background: skyblue;}
   color:black !important;
   text-decoration: none !important;
   display: block;
-  margin-top: 12px;
+  margin-top: 10px;
 
 }
 .social li{display: inline-block;}
 .social {
   line-height: 20px;
-  padding-top: 5px;
+  /* padding-top: 5px; */
   }
 .socialfa{
-  margin-right:10px;
-  width: 20px;
+  margin-right: 5px;
+  width: 39px;
+  height: 25px;
+  background-color: #555;
+  border-radius: 50%;
+  text-align: center;
 }
 /* .design li img{width: 20px;} */
 
