change color of icons

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,13 +3,13 @@
     <div class="footer">
       <div class="container">
           <div class="row">
-              <div class="col-12 col-sm-6 col-md-3">
+              <div class="col-4">
                 <ul class="design">
                 <li class="social"><a href="#" ><i class="fa fa-facebook pic socialfa"
-                   style="color:#3b5998";></i></a></li>
-                <li class="social"><a href="#"><i class="fa fa-twitter pic socialfa" style="color:#00acee";></i></a></li>
-                <li class="social"><a href="#" class="social"><i class="fa fa-linkedin pic socialfa" style="color:#3b5998";></i></a></li>
-                <li class="social"><a href="#" class="social"><i  class="fa fa-youtube socialfa" style="color:#c4302b ";></i>
+                   style="color:white";></i></a></li>
+                <li class="social"><a href="#"><i class="fa fa-twitter pic socialfa" style="color:white";></i></a></li>
+                <li class="social"><a href="#"><i class="fa fa-linkedin pic socialfa" style="color:white";></i></a></li>
+                <li class="social"><a href="#"><i  class="fa fa-youtube socialfa" style="color:white";></i>
                  </a></li> 
                 </ul>
               </div>
