--- a/templates/header.html
+++ b/templates/header.html
@@ -26,7 +26,7 @@ crossorigin="anonymous"></script>
           <li><a href="#">{{link4}}</a></li>
           <li><a href="#">{{link5}}</a></li>
           <li><a href="#">{{link6}}</a></li>
-          <li class=sign><a href="#">{{link7}}</a></li>  
+          <li class="sign"><a href="#">{{link7}}</a></li>  
         </ul>
       </nav> 
     </div>  
