--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@
 /* header style */
 .header{
   width: 100%;
-
-  /* background-image: url(../images/greybg.jpg); */
   background-size: cover;
 }
 nav{
@@ -61,6 +59,7 @@ nav ul .sign a{background: skyblue;}
   background-color: #555;
   border-radius: 50%;
   text-align: center;
+  padding: 6px;
 }
 /* .design li img{width: 20px;} */
 
@@ -155,7 +154,6 @@ input[type=text]
   border: 1px solid #ddd;
   width: 28%;
   background-color: white;
-  height: 187px;
   line-height: 100px;
   font-size: 30px;
   text-align: center;
@@ -164,5 +162,11 @@ input[type=text]
   margin-left: 10px;
   border-radius: 32px;
   text-decoration: none;
+  border-block-style: grey;
 }
-.box a:hover{color: skyblue;}
+.mainbox{
+  text-align: center;
+}
+ .box a:hover{color: skyblue;} 
+/* .box .mainbox:hover{color: rgb(8, 8, 8)} */
+
