--- a/templates/header.html
+++ b/templates/header.html
@@ -13,6 +13,7 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
+<script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
 
 
   <script id="template" type="text/x-handlebars-template">
