--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,7 @@ input[type=text]
  .box a:hover{color: skyblue;} 
 /* .box .mainbox:hover{color: rgb(8, 8, 8)} */
 
+.myquestions .item-list{
+  max-width: 600px;
+    margin: 0 auto;
+}
